--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,7 @@
 @import url("./post.css");
 @import url("./card.css");
+@import url("./asidebar.css");
+
 :root {
   --main-white: #f8f4e1;
   --main-color: #543310;
@@ -56,44 +58,7 @@ html {
   align-items: center;
   justify-content: center;
 }
-.asidebar {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.asidebar .link {
-  text-decoration: none;
-  color: var(--main-color);
-  margin: 5px;
-}
-.button-prime {
-  text-decoration: none;
-  color: var(--main-white);
-  background-color: var(--second-color);
-  padding: 10px 20px;
-  border-radius: 5px;
-  margin: 5px;
-  border: 1px solid var(--second-color);
-  transition: all 0.3s ease;
-}
-.button-prime:hover {
-  background-color: var(--main-white);
-  color: var(--second-color);
-}
-.button-second {
-  text-decoration: none;
-  color: var(--second-color);
-  background-color: var(--main-white);
-  padding: 10px 20px;
-  border-radius: 5px;
-  margin: 5px;
-  border: 1px solid var(--second-color);
-  transition: all 0.3s ease;
-}
-.button-second:hover {
-  background-color: var(--second-color);
-  color: var(--main-white);
-}
+
 .content {
   grid-area: content;
   display: flex;
